--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hola mundo</h1>
+<nav>
+    <ul>
+        <li>Inicio</li>
+        <li>Tareas</li>
+    </ul>
+</nav>
+    <h1>Hola mundo</h1>
+
 </body>
 </html>
